# langchain-dev-utils-example

./: .env.example  AGENTS.md  LICENSE  README.md  README_cn.md  langgraph.json  pyproject.toml
lib/: models.py  register.py
src/agents/: embedding_fn.py
src/agents/handoffs/: agent.py  tools.py
src/agents/simple_agent/: agent.py  context.py  tools.py
src/agents/supervisor/: agent.py  context.py  subagent.py  supervisor.py
src/agents/supervisor/subagent/: agent.py  tools.py
src/utils/: __init__.py
src/utils/providers/: __init__.py
src/utils/providers/chat_models/: __init__.py  load.py  register.py
src/utils/providers/embeddings/: __init__.py  load.py  register.py
