[project]
name = "langchain-dev-utils-example-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.0",
    "langchain-dev-utils[standard]>=1.2.16",
    "langchain-tavily>=0.2.15",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.10",
    "ruff>=0.14.9",
]
